@@ -1,5 +1,11 @@
 2018-03-01  Per Arne Vollan  <pvollan@apple.com>
 
+        Unreviewed build fix after r229140.
+
+        * WebProcess/cocoa/WebProcessCocoa.mm:
+
+2018-03-01  Per Arne Vollan  <pvollan@apple.com>
+
         Scrollbar preferences are ignored when the WebContent process doesn't have access to the WindowServer.
         https://bugs.webkit.org/show_bug.cgi?id=183231
         <rdar://problem/37793457>
